--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "imageCDN-webpack-loader",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "webpack为图片添加域名",
   "main": "index.js",
   "scripts": {
@@ -10,13 +10,17 @@
     "type": "git",
     "url": "git+https://github.com/xuanjinliang/imageCDN-webpack-loader.git"
   },
+  "keywords": [
+    "webpack",
+    "imagesCDN"
+  ],
   "author": "xuanjinliang",
   "license": "ISC",
-  "devDependencies": {
-    "loader-utils": "^0.2.16"
-  },
   "bugs": {
     "url": "https://github.com/xuanjinliang/imageCDN-webpack-loader/issues"
   },
-  "homepage": "https://github.com/xuanjinliang/imageCDN-webpack-loader#readme"
+  "homepage": "https://github.com/xuanjinliang/imageCDN-webpack-loader#readme",
+  "dependencies": {
+    "loader-utils": "^0.2.16"
+  }
 }
